# coastal-project

./: .env  .env.docker  .env.production.template  .gitignore  .pre-commit-config.yaml  .spectral.yaml  ASYNC_VALIDATION_CHECKLIST.md  ASYNC_VALIDATION_CHECKLIST.md.backup  BACKEND_API_TESTING_REPORT.md  CI_CD_SECURITY_PIPELINE.md  COMPREHENSIVE_INTEGRATION_TEST_REPORT.md  COMPREHENSIVE_MAINTENANCE_REPORT.md  COMPREHENSIVE_MAINTENANCE_REPORT.md.backup  COMPREHENSIVE_PROJECT_ANALYSIS_REPORT.md  COMPREHENSIVE_SYNCHRONIZATION_AUDIT_REPORT.md  COMPREHENSIVE_TESTING_REPORT.md  COMPREHENSIVE_TESTING_REPORT.md.backup  CONCURRENT_ACCESS.md  CONCURRENT_ACCESS.md.backup  Coastal_Banking_Documentation_Full.docx  Coastal_Banking_Documentation_Full.md  DATA_SYNCHRONIZATION_REPORT.md  DATA_SYNCHRONIZATION_REPORT.md.backup  DEPLOYMENT_GUIDE.md  DEPLOY_RENDER.md  DOCKER_DEPLOYMENT.md  EMOJI_REMOVAL_REPORT.html  EMOJI_REMOVAL_REPORT.json  ENVIRONMENT_CONFIGURATION_VALIDATION_REPORT.md  ERROR_FIXES_SUMMARY.md  ERROR_FIXES_SUMMARY.md.backup  FRONTEND_BACKEND_INTEGRATION_VALIDATION_REPORT.md  FRONTEND_FIX_SUMMARY.md  IMPLEMENTATION_PLAN.md  LICENSE  LOGIN_PAGE_DOCUMENTATION.md  LOGIN_PAGE_DOCUMENTATION.md.backup  MESSAGING_COMPONENT_VERIFICATION_REPORT.md  PENTESTING_AND_DEPLOYMENT_RECOMMENDATIONS.md  PRODUCTION_DEPLOYMENT_GUIDE.md.backup  (+66 more)
banking_backend/: .coverage  .coveragerc  .dockerignore  .env  .env.example  .env.production.template  .gitignore  AWS_DEPLOYMENT.md  CELERY_SETUP.md  DATABASE_CONNECTIVITY_REPORT.md  DATABASE_CONNECTIVITY_REPORT.md.backup  DEPLOYMENT.md  DEPLOYMENT.md.backup  Dockerfile  Dockerfile.prod  ENV_VARIABLES.md  FRONTEND_BACKEND_SYNCHRONIZATION_FIXES.md  FRONTEND_BACKEND_SYNCHRONIZATION_FIXES.md.backup  LOGIN_CREDENTIALS.md  LOGIN_CREDENTIALS.md.backup  PRODUCTION_DEPLOYMENT_CHECKLIST.md  README.md  RELEASE_NOTES.md  ROLE_BASED_ACCESS_CONTROL_DOCUMENTATION.md  SECURITY_FIXES.md  SPPER_AUTHENTICATION_IMPLEMENTATION.md  SPPER_AUTHENTICATION_IMPLEMENTATION.md.backup  STANDARDIZED_ERROR_HANDLING_REPORT.md  STANDARDIZED_ERROR_HANDLING_REPORT.md.backup  TRANSACTION_API_DOCUMENTATION.md  TRANSACTION_MODEL_CONSOLIDATION_REPORT.md  TRANSACTION_MODEL_CONSOLIDATION_REPORT.md.backup  WEBSOCKET_API.md  build.sh  celery.py  check_errors.txt  check_hash.py  check_naming.py  comprehensive_test_report.json  comprehensive_test_script.py  (+89 more)
banking_backend/.github/: copilot-instructions.md
banking_backend/.github/workflows/: ci_cd_pipeline.yml
banking_backend/.hypothesis/constants/: 0088ecb39d687bbb  00ef0758dad9ec94  015077e48a2a6184  049211d163518cd8  04d866d216ae5618  (+184 more)
banking_backend/audits/: compliance_mapping.md
banking_backend/authentication/: backends.py  views.py
banking_backend/banking/: apps.py  consumers.py  models.py  permissions.py  routing.py  serializers.py  serializers.py.backup  signals.py  tests.py  urls.py  views.py  views_new.py
banking_backend/banking_backend/: cache_utils.py  database_optimizations.py
banking_backend/chat/: apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
banking_backend/config/: __init__.py  asgi.py  celery.py  channels_middleware.py  routing.py  settings.py  settings.py.backup  settings_test.py  urls.py  wsgi.py
banking_backend/core/: __init__.py  admin.py  apps.py  audit_signals.py  chat_views.py  consumers.py  exceptions.py  health.py  log_filters.py  middleware.py  mixins.py  models.py  models_legacy.py  models_legacy.py_temp_restore.py  pdf_services.py  permissions.py  report_download.py  serializers.py  services.py  signals.py  tasks.py  test_api_accounts.py  test_api_dashboards.py  test_api_loans.py  test_api_transactions.py  test_audit_fixes.py  test_maker_checker.py  test_security_audit_hardening.py  test_security_permissions.py  tests.py  tests_celery.py  tests_logic.py  tests_websocket.py  urls.py  validators.py  views.py  xlsx_services.py
banking_backend/fixtures/: initial_data.json  test_data.json
banking_backend/fraud_detection/: audit_trail.py  consumers.py  fraud_detection_engine.py  logging_system.py  models.py  redis_rule_engine.py  serializers.py  urls.py  views.py
banking_backend/messaging/: consumers.py  models.py  routing.py  serializers.py  tests.py  urls.py  views.py
banking_backend/monitoring/: prometheus.yml  views.py
banking_backend/operations/: consumers.py  models.py  permissions.py  routing.py  serializers.py  tests.py  urls.py  views.py  views.py.backup
banking_backend/performance/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
banking_backend/performance_monitoring/: serializers.py  urls.py  views.py
banking_backend/products/: models.py  serializers.py  urls.py  views.py
banking_backend/reports/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
banking_backend/scripts/: automated_backup.bat  automated_backup.sh  backup_database.py  create_test_commissions.py  create_test_users.py  create_test_users.py.backup  csp_monitor.py  daily_backup.py  health_check.py  security_audit.py  sqlite_backup.py
banking_backend/services/: models.py  serializers.py  urls.py  views.py
banking_backend/settings/: apps.py  models.py  serializers.py  urls.py  views.py
banking_backend/templates/: 500.html
banking_backend/tests/: test_auth_integration.py  test_operational_workflows.py  test_properties.py  test_security.py  verify_phase_4.py
banking_backend/transactions/: models.py  serializers.py  tests.py  urls.py  views.py  views.py.backup
banking_backend/users/: admin.py  apps.py  audit_models.py  audit_utils.py  auth_backend.py  authentication.py  authentication_backends.py  export_views.py  forms.py  models.py  permissions.py  security.py  security_middleware.py  serializers.py  services.py  signals.py  test_password_reset.py  test_sendexa.py  test_serializers.py  test_superuser.py  tests.py  urls.py  views.py  views.py.backup
(+1232 files in other folders)
